syntax = "proto3";

option csharp_namespace = "GrpcService";

package greet;

service User {
  rpc GetUser (UserIdRequest) returns (UserReply);
  rpc GetUsers (Pagination) returns (UsersReply);
}

message Pagination {
  int32 page = 1;
  int32 page_size = 2;
}

message UserIdRequest {
  uint64 id = 1;
}

message UsersReply {
  repeated UserReply users = 1; 
}

message UserReply {
  uint64 id = 1;
}